--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="css/main.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Play:wght@400;700&display=swap"
+  <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap"
     rel="stylesheet">
 </head>
 
@@ -23,26 +23,24 @@
     <article>
       <div class="content-wrapper">
         <div class="profile-image-container">
-          <img src="img/pexels-monstera-production-5876695.jpg" alt="Lena Chang" class="profile-image">
+          <img src="img/headshot.jpg" alt="Ashlan Aschliman" class="profile-image">
         </div>
         <div class="profile-description">
           <h2>About me!</h2>
-          <p><strong>Hi, I'm Ashlan Aschliman.</strong> With a passion for fostering growth and learning, I am a dedicated
-            educator who has embarked on an exciting
-            journey to pivot to a front-end developer. My background in teaching has equipped me with strong
-            communication
-            skills, a knack for problem-solving, and a deep understanding of user-centric design principles. I am now
-            harnessing my creativity and technical aptitude to craft captivating and user-friendly web experiences,
-            blending my pedagogical expertise with coding prowess to create innovative digital solutions that engage and
-            inspire. Eager to embrace this new chapter, I am committed to continuous learning and contributing to the
-            ever-evolving world of web development.</p>
+          <p><strong>Hi, I'm Ashlan Aschliman.</strong> With a strong desire for continuous learning and a passion for
+            creating impactful experiences, I'm an international flight attendant transitioning into front-end
+            development. During my *almost* decade in the fast-paced field of aviation, I honed my ability to clearly communicate
+            ideas with many different types of people & personalities (a skill crucial for collaborating with diverse teams) and developed strong
+            problem-solving skills that translate well to debugging code. My experience thinking on my feet in dynamic
+            situations will be valuable in tackling technical challenges. Having independently learned HTML, CSS, and JavaScript, I'm eager to further develop these skills and contribute to the ever-evolving world of web
+            development. </p>
         </div>
       </div>
     </article>
   </main>
   <footer>
     <div class="content-wrapper">
-      <p class="copyright">copyright 202X | (Ashlan Aschliman)</p>
+      <p class="copyright">copyright 2024 | (Ashlan Aschliman)</p>
     </div>
   </footer>
 
